- Enh #1618: Fixed CHttpRequest::getAcceptTypes() to make sure it works even if HTTP_ACCEPT is not defined (Y!!)
- Enh #1627: Added check if FreeType support is installed and enabled in GD (mdomba)
- Enh #1641: Added PhpUnit 3.5.0RC1 and up support (Sam Dark)
- Enh #1661: Added CActiveForm 'reset' event handler to reset validation errors if using CHtml::resetButton() (mdomba)
- Enh: Upgraded JQuery UI to 1.8.5 (Sam Dark)
- Enh: Added checking for empty keywords in addSearchCondition(), to prevent adding unnecessary conditions (mdomba)
- Enh: Added flushValues() method to the cache classes (Y!!)
- Enh: Added buttonset for CJuiButoon (sebas)
- Chg #1680: Upgraded jQuery to version 1.4.3 (Sam Dark)
- Chg: The javascript files of CListView and CGridView are now registered at the end of the page (Qiang)
- Chg: Log filters will now be invoked only when there are some log messages available (Qiang)


Version 1.1.4 September 5, 2010
-------------------------------
- Bug #698: Now you can get and modify criteria of the current query in beforeFind() event handler (Sam Dark)
- Bug #1031: Fixed the bug that the filters in CGridView does not work in IE (Qiang)
- Bug #1119: Added CUploadedFile::reset() to make it more test-friendly (Qiang)
- Bug #1176: Fixed the bug that CVarDumper doesn't highlight well strings with quotes (Qiang)
- Bug #1376: Fixed the bug that the timestamps displayed in Web application log may not be formatted properly (Qiang)
- Bug #1377: Fixed the bug that CStarRating did not work when not setting the model property (Qiang)
- Bug #1382: Fixed space removal in CDbCriteria::compare() (Sam Dark)
- Bug #1384: SET NAMES problem with MSSQL PDO Provider (Qiang)
- Bug #1390: AR may lose precision if a column is declared as unsigned int for MySQL database (Qiang)
- Bug #1404: CSecurityManager::validateData() fails when the data is an array (Qiang)
- Bug #1408: CDbAuthManager may throw exception when unserializing data from auth items in PHP 5.3 (Qiang)